--- a/MineCraft.uproject
+++ b/MineCraft.uproject
@@ -7,7 +7,11 @@
 		{
 			"Name": "MineCraft",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+      "AdditionalDependencies": [
+        "Engine",
+        "ProceduralMeshComponent"
+      ]
 		}
 	]
 }
