--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,14 +4,14 @@
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel=Projectile, Response=ECR_Ignore)))
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/FirstPersonCPP/Maps/ProceduralMap.ProceduralMap
+EditorStartupMap=/Game/FirstPersonCPP/Maps/VoxelMap.VoxelMap
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/FirstPersonCPP/Maps/ProceduralMap.ProceduralMap
+GameDefaultMap=/Game/FirstPersonCPP/Maps/VoxelMap.VoxelMap
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Script/MineCraft.MineCraftGameMode
 GlobalDefaultServerGameMode=None
